[package]
name = "nvml"
version = "0.1.0"
authors = ["sihao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvml-sys = {path = "nvml-sys"}


[workspace]
members = [
    "nvml-sys",
    "nvml-examples",
]

[[bin]]
name = "nvml-examples"
path = "nvml-examples/src/main.rs"
