[package]
name = "nvml-sys"
version = "0.1.0"
authors = ["sihao"]
edition = "2018"
publish = true
repository = "https://github.com/divinerapier/nvml-rs"
description = "An rust wrapper of libnvidia-ml"
license = "Apache-2.0"
categories = ["nvidia", "gpu"]
keyworks = ["nvidia", "gpu"]
include = ["*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.51.0"
cc = "1.0"
